Spark accept any port + wip model selector
